--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server.js --exec babel-node --presets babel-preset-env",
+    "start": "cross-env NODE_ENV=production nodemon ./server.js --exec babel-node --presets babel-preset-env",
+    "dev": "cross-env NODE_ENV=development nodemon ./server.js --exec babel-node --presets babel-preset-env",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,5 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
     "nodemon": "^2.0.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
   }
 }
