--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": " NODE_ENV=production node ./server.js",
-    "build": "babel src -d build",
+    "start": "NODE_ENV=production node ./server.js --exec babel-node --presets babel-preset-env"",
     "dev": "cross-env NODE_ENV=development nodemon ./server.js --exec babel-node --presets babel-preset-env",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
